kubernetes/infrastructure/longhorn/overlays/management-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal
      namespace: main-gateway
      sectionName: https-longhorn
  hostnames:
    - "longhorn.mgmt.yuriy-lab.cloud"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
